# solana-validator-optimizer

./: .gitignore  HOW_OPTIMIZATION_WORKS.md  INSTALL.md  LICENSE  OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  REQUIREMENTS.md  SETUP_GUIDE.md  STATUS.md  TECHNICAL_APPROACH.md  UNIVERSAL_OPTIMIZATION_PROOF.md  USAGE.md  VOTE_OPTIMIZATION_GUIDE.md  apply-vote-optimizations.sh  dashboard.sh  demo_real_optimization.sh  demo_rust_optimizer.sh  download-validator.sh  install-validator.sh  install.sh  monitor-vote-success.sh  monitor-votes.sh  optimize-validator.sh  optimize-voting.sh  push-to-github.sh  request-airdrop.sh  run.sh  run_rust_integration.sh  setup-validator.sh  stop-validator.sh  test_rust_optimizer.sh  validate_performance.sh  validation-report.md
rust-port/: API.md  Cargo.toml  README.md  SMART_CONTRACT_ARCHITECTURE.md  SMART_CONTRACT_TEST_RESULTS.md  create_test_program.sh  demo_live_metrics.sh  demo_smart_contract.sh  test_connectivity.sh  test_smart_contract_local.sh
rust-port/examples/: demo.rs
rust-port/src/: blockchain.rs  config.rs  lib.rs  main.rs  monitor.rs  optimizer.rs  process_manager.rs  real_optimizer.rs  smart_contract.rs  standalone.rs  system.rs  utils.rs  validator.rs
